[package]
name = "keystore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = { workspace = true }
cstr_core = { workspace = true }
rust_tools = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
rand_chacha = { workspace = true }
arrayref = { workspace = true }
sha2 = { workspace = true }
num-bigint-dig = { workspace = true }
thiserror = { workspace = true }
ed25519-bip32-core = { workspace = true }
cryptoxide = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
rsa = { workspace = true }
zcash_vendor = { workspace = true }
zeroize = { workspace = true }

[features]
default = ["std"]
std = []
rsa = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }