[package]
name = "pczt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { version = "0.13", default-features = false }
prost-types = {version = "0.13", default-features = false}

[build-dependencies]
prost-build = "0.13"

