[package]
name = "rust_c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_rust_c = { path = "./src/common", optional = true, default-features = false }


cty = { workspace = true }
cstr_core = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
keystore = { workspace = true }
app_aptos = { workspace = true }
app_utils = { workspace = true }
rust_tools = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
bitcoin = { workspace = true }
ur-registry = { workspace = true }
app_arweave = { workspace = true }
cryptoxide = { workspace = true }
app_bitcoin = { workspace = true }
base64 = { workspace = true }
app_cardano = { workspace = true }
itertools = { workspace = true }
ed25519-bip32-core = { workspace = true }

app_cosmos = { workspace = true, default-features = false }
either = { workspace = true }

app_ethereum = { workspace = true }
core2 = { workspace = true }

app_solana = { workspace = true }

app_near = { workspace = true }

app_sui = { workspace = true }

app_stellar = { workspace = true }

app_ton = { workspace = true }

app_tron = { workspace = true }

app_wallets = { workspace = true }

ur-parse-lib = { workspace = true }

app_xrp = { workspace = true }

app_zcash = { workspace = true }
zcash_vendor = { workspace = true }
sim_qr_reader = { workspace = true }

[lib]
crate-type = ["staticlib"]

[features]
# feature toggles
use-allocator = []
simulator = []
aptos = []
arweave = []
bitcoin = []
cardano = []
cosmos = []
ethereum = []
near = []
solana = []
stellar = []
sui = []
ton = []
tron = []
xrp = []
zcash = []
test_cmd = []

debug-memory = ["multi-coins", "common_rust_c/debug-memory"]

multi-coins = [
    "common_rust_c/multi-coins",
    "bitcoin",
    "ethereum",
    "solana",
    "aptos",
    "near",
    "cosmos",
    "cardano",
    "sui",
    "tron",
    "xrp",
    "arweave",
    "stellar",
    "ton",
    "zcash",
]

btc-only = ["common_rust_c/btc-only", "bitcoin"]

# build variants
# production
production-multi-coins = ["use-allocator", "multi-coins"]
production-btc-only = ["use-allocator", "btc-only"]
# debug
debug-multi-coins = ["test_cmd", "production-multi-coins"]
debug-btc-only = ["test_cmd", "production-btc-only"]
# simulator
simulator-multi-coins = ["simulator", "multi-coins"]
simulator-btc-only = ["simulator", "btc-only"]
default = ["simulator-multi-coins"]

[dev-dependencies]
keystore = { path = "../keystore" }

[build-dependencies]
cbindgen = "0.27.0"
