[package]
name = "rust_c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#external
cty = { workspace = true }
cstr_core = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
serde_json = { workspace = true }
hex = { workspace = true }
bitcoin = { workspace = true }
cryptoxide = { workspace = true }
base64 = { workspace = true }
itertools = { workspace = true }
either = { workspace = true }
core2 = { workspace = true }
thiserror = { workspace = true }
bitcoin_hashes = { workspace = true }
rsa = { workspace = true }
sha1 = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
cipher = { workspace = true }
minicbor = { workspace = true }
#keystone owned
sim_qr_reader = { workspace = true, optional = true }
keystore = { workspace = true }
ur-registry = { workspace = true }
ur-parse-lib = { workspace = true }
zcash_vendor = { workspace = true, optional = true }
ed25519-bip32-core = { workspace = true }
app_utils = { workspace = true }
rust_tools = { workspace = true }

#apps
app_wallets = { workspace = true }
app_bitcoin = { workspace = true, optional = true }
app_ethereum = { workspace = true, optional = true }
app_cardano = { workspace = true, optional = true }
app_tron = { workspace = true, optional = true }
app_solana = { workspace = true, optional = true }
app_near = { workspace = true, optional = true }
app_xrp = { workspace = true, optional = true }
app_cosmos = { workspace = true, optional = true }
app_aptos = { workspace = true, optional = true }
app_sui = { workspace = true, optional = true }
app_arweave = { workspace = true, optional = true }
app_stellar = { workspace = true, optional = true }
app_ton = { workspace = true, optional = true }
app_zcash = { workspace = true, optional = true }
app_monero = { workspace = true, optional = true }
app_avalanche = { workspace = true, optional = true }
app_ergo = { workspace = true, optional = true }

[lib]
crate-type = ["staticlib"]

[features]
# feature toggles
use-allocator = []
simulator = ["dep:sim_qr_reader", "app_sui/simulator"]
aptos = ["dep:app_aptos"]
arweave = ["dep:app_arweave"]
bitcoin = ["dep:app_bitcoin"]
ltc = []
doge = []
dash = []
bch = []
cardano = ["dep:app_cardano"]
cosmos = ["dep:app_cosmos"]
ethereum = ["dep:app_ethereum"]
near = ["dep:app_near"]
solana = ["dep:app_solana"]
stellar = ["dep:app_stellar"]
sui = ["dep:app_sui"]
ton = ["dep:app_ton"]
tron = ["dep:app_tron"]
xrp = ["dep:app_xrp"]
zcash = ["dep:app_zcash", "dep:zcash_vendor"]
monero = ["dep:app_monero"]
avalanche = ["dep:app_avalanche"]
ergo = ["dep:app_ergo"]
test_cmd = []

debug-memory = ["multi-coins"]

multi-coins = [
    "aptos",
    "arweave",
    "bch",
    "bitcoin",
    "cardano",
    "cosmos",
    "dash",
    "ethereum",
    "ltc",
    "doge",
    "near",
    "solana",
    "stellar",
    "sui",
    "ton",
    "tron",
    "xrp",
    "avalanche",
]

btc-only = ["bitcoin"]

cypherpunk = ["bitcoin", "zcash", "monero", "ergo"]

# build variants
# production
production-multi-coins = ["use-allocator", "multi-coins"]
production-btc-only = ["use-allocator", "btc-only"]
production-cypherpunk = ["use-allocator", "cypherpunk"]
# debug
debug-multi-coins = ["test_cmd", "use-allocator", "multi-coins"]
debug-btc-only = ["test_cmd", "use-allocator", "btc-only"]
debug-cypherpunk = ["test_cmd", "use-allocator", "cypherpunk"]
# simulator
simulator-multi-coins = ["simulator", "multi-coins"]
simulator-btc-only = ["simulator", "btc-only"]
simulator-cypherpunk = ["simulator", "cypherpunk"]
# make IDE happy
default = ["simulator-multi-coins"]

[dev-dependencies]
keystore = { path = "../keystore" }

[build-dependencies]
cbindgen = "0.27.0"
