[package]
name = "sim_qr_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screenshots = "0.8.5"
image = "0.24.7"
quircs = "0.10.0"
anyhow = "1.0.75"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
]}