[package]
name = "zcash_vendor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = { workspace = true }
rand_chacha = { version = "0.3.1", default-features = false }
sha2 = { version = "0.10.6", default-features = false, features = ["oid"] }
# zcash
reddsa = { version = "0.5.1", default-features = false, features = ["alloc"] }
blake2b_simd = { version = "1.0.2", default-features = false }
ff = { version = "0.13.0", default-features = false, features = [
    "alloc",
    "bits",
] }
pasta_curves = { version = "0.5.1", default-features = false, features = [
    "alloc",
    "bits",
] }
subtle = { version = "2.6", default-features = false }
group = { version = "0.13.0" }
aes = "0.8"
fpe = { version = "0.6", default-features = false, features = ["alloc"] }
f4jumble = { version = "0.1", default-features = false }
byteorder = { version = "1", default-features = false }
ripemd = { version = "0.1", default-features = false, features = ["oid"] }
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
bip32 = { path = "../../../crates/bip32", default-features = false, features = [
    "alloc",
    "secp256k1-ffi",
] }
secp256k1 = { version = "0.29", default-features = false, features = ["alloc"] }
core2 = { workspace = true }
hex = { workspace = true }
#zcash end
