[package]
name = "zcash_vendor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = { workspace = true }
rand_chacha = { version = "0.3.1", default-features = false }
sha2 = { version = "0.10.6", default-features = false, features = ["oid"] }
# zcash
reddsa = { version = "0.5.1", default-features = false, features = ["alloc"] }
blake2b_simd = { workspace = true }
ff = { version = "0.13.0", default-features = false, features = [
    "alloc",
    "bits",
] }
pasta_curves = { version = "0.5.1", default-features = false, features = [
    "alloc",
    "bits",
] }
subtle = { version = "2.6", default-features = false }
group = { version = "0.13.0" }
aes = { workspace = true }
fpe = { version = "0.6", default-features = false, features = ["alloc"] }
f4jumble = { version = "0.1", default-features = false }
byteorder = { version = "1", default-features = false }
ripemd = { version = "0.1", default-features = false, features = ["oid"] }
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
bip32 = { git = "https://github.com/KeystoneHQ/crates.git", tag = "no_std", default-features = false, features = [
    "alloc",
    "secp256k1-ffi",
] }
secp256k1 = { version = "0.29", default-features = false, features = ["alloc"] }
core2 = { workspace = true }
hex = { workspace = true }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = [
    "alloc",
] }
postcard = { version = "1.0.3", features = ["alloc"] }
getset = { version = "0.1.3" }
serde = { workspace = true }
serde_with = { version = "3.11.0", features = ["alloc", "macros"], default_features = false }
#zcash end
