[package]
name = "app_aptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keystore = { workspace = true, default-features = false }
bcs = { workspace = true }
app_utils = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ref-cast = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
cryptoxide = { workspace = true }

[dev-dependencies]
keystore = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }