[package]
name = "app_arweave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keystore = { path = "../../keystore", default-features = false }
third_party = { path = "../../third_party" }
app_utils = {path="../utils"}
rand_chacha = { version="0.3.1", default-features=false }
sha2 = { version = "0.10.6", default-features = false, features = ["oid"] }
aes = { version = "0.8.4", default-features = false }
cbc = { version = "0.1.2", default-features = false }
cipher = { version = "0.4.4", default-features = false, features = ["block-padding", "alloc"] }

[dev-dependencies]
keystore = { path = "../../keystore"}