[package]
name = "app_arweave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keystore = { workspace = true, default-features = false }
app_utils = { workspace = true }
rand_chacha = { workspace = true }
sha2 = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
cipher = { workspace = true }
serde = { workspace = true }
rust_tools = { workspace = true }
lazy_static = { workspace = true }
base64 = { version = "0.11.0", default-features = false, features = ["alloc"] }
cryptoxide = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
rsa = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
keystore = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }