[package]
name = "app_babylon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { workspace = true }
thiserror = { workspace = true }
cryptoxide = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
keystore = { workspace = true, features = ["multi_coins"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
