[package]
name = "app_bitcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keystore = { path = "../../keystore", default-features = false }
third_party = { path = "../../third_party" }
app_utils = { path = "../utils" }
rust_tools = {path = "../../tools"}

[features]
no_std = []
default = ["std"]
std = []

[dev-dependencies]
keystore = { path = "../../keystore" }

[patch.crates-io.bitcoin]
git = "https://github.com/KeystoneHQ/rust-bitcoin.git"
tag = "v0.31.2"
default-features = false
features = ["no-std", "secp-recovery"]
