[package]
name = "app_cardano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keystore = { path = "../../keystore", default-features = false }
third_party = { path = "../../third_party" }
cardano-serialization-lib = { git = "https://git@github.com/KeystoneHQ/cardano-serialization-lib.git", tag = "0.0.6" }
app_utils = { path = "../utils" }
rust_tools = { path = "../../tools" }

[dev-dependencies]
keystore = { path = "../../keystore" }