[package]
name = "app_cosmos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keystore = { path = "../../keystore", default-features = false }
third_party = { path = "../../third_party", default-features = false }
serde_json = { version = "1.0.95", default-features = false, features = ['alloc'] }
serde = { version = "1.0.139", default-features = false }
serde_derive = { version = "1.0.159"}
prost = { version = "0.11", default-features = false }
prost-types = { version = "0.11", default-features = false }
tendermint-proto = "0.32"
app_utils = {path = "../utils"}

[dev-dependencies]
keystore = { path = "../../keystore" }

[features]
default = ["std"]
std = []

[lib]
doctest = false