[package]
name = "app_cosmos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keystore = { workspace = true, default-features = false }
serde_json = { workspace = true, features = ['alloc'] }
serde = { workspace = true }
serde_derive = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tendermint-proto = { workspace = true }
app_utils = { workspace = true }
bech32 = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
cryptoxide = { workspace = true }
rust_tools = { workspace = true }

[dev-dependencies]
keystore = { workspace = true }

[features]
default = ["std"]
std = []

[lib]
doctest = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }