[package]
name = "app_ergo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ergo-lib = "0.28.0"
keystore = { path = "../../keystore", default-features = false }
third_party = { path = "../../third_party" }
bitstream-io = { git = "https://github.com/KeystoneHQ/bitstream-io", tag = "no_std@0.1.2", default-features = false, features = [
    "alloc",
] }
app_utils = { path = "../utils" }
rust_tools = { path = "../../tools" }

[dev-dependencies]
keystore = { path = "../../keystore" }
