[package]
name = "app_ergo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hex = { workspace = true }
thiserror = { workspace = true }
app_utils = { workspace = true }
rust_tools = { workspace = true }
core2 = { workspace = true }

[dev-dependencies]
keystore = { workspace = true }

[dependencies.ergo-lib]
git = "https://github.com/Alesfatalis/sigma-rust-mini"
branch = "develop"
default-features = false
