[package]
name = "app_ethereum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {version = "1.4.0", default-features = false}
ethereum-types = {version = "0.14.1", default-features = false, features = ["rlp", "codec"]}
rlp = {version = "0.5.2", default-features = false}
keystore = { workspace = true, default-features = false }
ethabi = {version = "18.0.0", default-features= false, features=["serde"]}
app_utils = {workspace = true}
serde = { workspace = true }
rust_tools = {workspace = true}
unicode-xid = {version = "0.2", default-features = false, features = ["no_std"]}

thiserror = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
bitcoin = { workspace = true }
cryptoxide = { workspace = true }
rsa = { workspace = true }
ur-registry = { workspace = true }

[dev-dependencies]
keystore = { path = "../../keystore" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }