[package]
name = "app_icp"
version = "0.1.0"
edition = "2021"


[dependencies]
keystore = { path = "../../keystore", default-features = false }
third_party = { path = "../../third_party" }
sha2 = { version = "0.10.6" }
cbc = { version = "0.1.2", default-features = false }
serde = { version = "1.0.139", default-features =false }
hex = { version = "0.4.3", features = ["serde"] }
crc32fast = "1.3.2"
pkcs8 = {version = "0.10.2",features = ["alloc"]}
data-encoding = "2.6.0"
[dev-dependencies]
keystore = { path = "../../keystore"}
