[package]
name = "app_icp"
version = "0.1.0"
edition = "2021"


[dependencies]
keystore = { path = "../../keystore", default-features = false }
third_party = { path = "../../third_party" }
sha2 = { version = "0.10.6", default-features = false, features = ["oid"] }
cbc = { version = "0.1.2", default-features = false }
serde = { version = "1.0.139", default-features =false }
crc32fast = {version = "1.3.2",default-features = false}
pkcs8 = {version = "0.10.2",features = ["alloc"]}
data-encoding = {version = "2.6.0",default-features = false,features = ["alloc"]}
[dev-dependencies]
keystore = { path = "../../keystore"}
