[package]
name = "app_monero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { workspace = true }
cryptoxide = { workspace = true }
bitcoin = { workspace = true }
curve25519-dalek = { version = "4.1.3", default-features = false }
base58-monero = { version = "2", default-features = false }
rand_core = { workspace = true }
zeroize = { workspace = true }
app_utils = { path = "../utils" }
rust_tools = { path = "../../tools" }
chacha20 = { version = "0.9.1", default-features = false }
rand_chacha = { workspace = true }
thiserror = { workspace = true }
keystore = { workspace = true, default-features = false }
cuprate-cryptonight = { git = "https://github.com/KeystoneHQ/cuprate", default-features = false, features = ["no_std"] }
monero-serai = { git = "https://github.com/KeystoneHQ/serai", default-features = false }
monero-wallet = { git = "https://github.com/KeystoneHQ/serai", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }