[package]
name = "app_near"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keystore = { workspace = true }

app_utils = { workspace = true }
borsh = { version = "0.9", default-features = false }
serde = { workspace = true }
primitive-types = { version = "0.10", default-features = false }
thiserror = { workspace = true }
cryptoxide = { workspace = true }
ur-registry = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
bitcoin = { workspace = true }

[dev-dependencies]
keystore = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }