[package]
name = "app_solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keystore = { path = "../../keystore", default-features = false }
third_party = { path = "../../third_party", default-features=false}
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
serde_json = {version="1.0.95", default-features=false, features=['alloc']}
serde = { version = "1.0.139", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ['alloc'] }
bincode = { version = "2.0.0-rc.3", default-features = false, features=['alloc','serde'] }
num-derive = "0.3.3"
serde_derive = { version = "1.0.159"}
uint = { version = "0.9.3", default-features = false }
arrayref = "0.3.6"
app_utils = { path = "../utils" }
rust_tools = { path = "../../tools" }

[dev-dependencies]
keystore = { path = "../../keystore" }

[features]
default = ["std"]
std = []

[lib]
doctest = false