[package]
name = "app_stellar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keystore = { workspace = true, default-features = false }
hex = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
cryptoxide = { workspace = true }
base64 = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }