[package]
name = "app_sui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keystore = { workspace = true }
app_utils = { workspace = true }
sui-types = { git = "https://github.com/KeystoneHQ/sui.git", tag = "0.1.2", package = "sui-types" }
serde = { workspace = true }
serde_derive = { workspace = true }
bcs = { workspace = true }
hex = { workspace = true }
blake2 = { workspace = true }
serde_json = { workspace = true }
bitcoin = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
keystore = { path = "../../keystore" }

[features]
default = ["std"]
std = []
simulator = [
    "sui-types/keystone-simulator"
]

[lib]
doctest = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }