[package]
name = "app_sui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keystore = { workspace = true }
app_utils = { workspace = true }
sui-transaction-types-core = { git = "https://github.com/KeystoneHQ/sui.git", tag = "mainnet-nostd-v1.69.2.1", default-features = false, features = ["alloc"] }
serde = { workspace = true }
serde_derive = { workspace = true }
bcs = { workspace = true }
hex = { workspace = true }
blake2 = { workspace = true }
serde_json = { workspace = true }
bitcoin = { workspace = true }
thiserror = { workspace = true }
rust_tools = { workspace = true }

[dev-dependencies]
keystore = { workspace = true, features = ["multi_coins"] }

[features]
default = ["std"]
std = []
simulator = [
]

[lib]
doctest = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
