[package]
name = "app_ton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
third_party = { path = "../../third_party" }
keystore = { path = "../../keystore", default-features = false }
bitstream-io = { path = "../../../../bitstream-io", default-features = false, features = [
    "alloc",
] }
num-bigint = { version = "0.4.5", default-features = false }
num-integer = { version = "0.1.46", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
sha2 = "0.10.8"
crc = "3.2.1"
lazy_static = "1.4.0"
serde = { version = "1.0.199", default-features = false, features = ["derive"] }

[dev-dependencies]
keystore = { path = "../../keystore" }
anyhow = "*"
